kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue
            port:
              number: 8080
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
